# cat-agent

./: CHANGELOG.md  IMPLEMENTATION_GUIDE.md  MASTERPLAN.md  OPENAI_MASTERPLAN.md  README.md  pyproject.toml  test_live_codex_spike.py
benchmarks/: RESULTS.md  bench_classify.py  parity_run.py
src/catagent/: __about__.py  __init__.py  classify.py
src/catagent/_adapters/: base.py  claude.py
src/catclaws/: __about__.py  __init__.py  _backend.py  classify.py
src/catclaws/_adapters/: __init__.py  base.py  claude.py  codex.py
tests/: test_adapter_contract.py  test_classify.py  test_codex_adapter.py  test_rate_limit.py
